# Stratosphere

./: CMakeLists.txt
Engine/: CMakeLists.txt  main.cpp
Engine/Shaders/: triangle.frag  triangle.vert  triangle.vert.spv
Engine/include/ECS/: ArchetypeManager.h  ArchetypeStore.h  Components.h  ECSContext.h  Entity.h  Prefab.h  PrefabSpawner.h  Query.h  QueryManager.h  SystemFormat.h
Engine/include/Engine/: Application.h  GroundPlaneRenderPassModule.h  ImGuiLayer.h  MeshRenderPassModule.h  PerformanceMonitor.h  Renderer.h  SModelRenderPassModule.h  SwapChain.h  TrianglesRenderPassModule.h  VulkanContext.h  Window.h
Engine/include/Structs/: FrameContextStruct.h  SpawnGroup.h
Engine/include/assets/: AssetManager.h  Handles.h  MeshAsset.h  ModelAsset.h  ModelFormat.h  SModelLoader.h
Engine/include/assets/model/: SModelEnums.h  SModelHeader.h  SModelPrimitiveRecord.h  SModelSkinRecord.h
Engine/include/utils/: BufferUtils.h
Engine/shaders/: mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  smodel.frag  smodel.frag.spv  smodel.vert  smodel.vert.spv
Engine/src/: Application.cpp  AssetManager.cpp  BufferUtils.cpp  GLFWWindow.cpp  GroundPlaneRenderPassModule.cpp  ImGuiLayer.cpp  MeshAssets.cpp  MeshRenderPassModule.cpp  PerformanceMonitor.cpp  Pipeline.cpp  Renderer.cpp  SModelRenderPassModule.cpp  SwapChain.cpp  TrianglesRenderPassModule.cpp  VulkanContext.cpp
Sample/: BattleConfig.json  CMakeLists.txt  MySampleApp.h  Scinerio.json  VerifyLoadSModel.h  update.h
Sample/entities/: CombatKnight.json  HeavyInfantry.json  LightInfantry.json  TreeStumpWall.json
Sample/src/: MenuManager.cpp  MenuManager.h  MySampleApp.cpp  ScenarioSpawner.cpp  VerifyLoadSModel.cpp  main.cpp  update.cpp
Sample/systems/: CharacterAnimationSystem.h  CombatSystem.h  CommandSystem.h  LocalAvoidanceSystem.h  MovementSystem.h  NavGrid.h  NavGridBuilderSystem.h  PathfindingSystem.h  PoseUpdateSystem.h  RenderSystem.h  SpatialIndexSystem.h  SteeringSystem.h
