cmake_minimum_required(VERSION 3.20)
project(MyEngineRoot VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# Default to Debug if not provided (useful for single-config)
if (NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE "Debug" CACHE STRING "Build type" FORCE)
endif()

# Make FetchContent available
include(FetchContent)

# Add subprojects
add_subdirectory(Engine)
add_subdirectory(Sample)